# the-ledger

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DATA_GENERATION.md  DESIGN.md  DOMAIN_NOTES.md  Dockerfile  EVENT_SCHEMA_REFERENCE.md  README.md  SUBMISSION_GUIDE.md  SUBMISSION_SUMMARY.md  docker-compose.yml  domain_notes_final.md  pyproject.toml  pytest.ini  requirements.txt  task.md
artifacts/: audit-APEX-0027.json  narrative_test_results.txt  regulatory_package_NARR05.json  test_results_baseline.txt  test_results_phase6_mcp.txt
data/: applicant_profiles.json  seed_events.jsonl
datagen/: generate_all.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
ledger/: api.py  auth.py  demo_scenarios.py  event_store.py  exceptions.py  mcp_server.py  metrics.py  observability.py  regulatory.py  upcasters.py
scripts/: audit_application.py  bootstrap_event_store.py  create_synthetic_application.py  demo_narr05.py  replay_projection.py  run_pipeline.py  run_web_api.py  seed_demo_data.py
sql/: event_store.sql
src/: __init__.py  event_store.py  schema.sql
starter/: README.md
tests/: conftest.py  test_agent_checkpoint_resume.py  test_agent_error_classification.py  test_agent_occ_exhaustion.py  test_agent_occ_retry.py  test_agent_recovery_hardening.py  test_agent_snapshot_hardening.py  test_api_auth.py  test_concurrency.py  test_credit_agent.py  test_credit_agent_registry_wiring.py  test_document_agent.py  test_event_naming.py  test_event_store_smoke.py  test_fraud_agent.py  test_gas_town.py  (+17 more)
(+80 files in other folders)
